--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,12 @@ p {
 .header .contacts-item:not(.header .contacts-item:last-child) {
   margin-right: 50px;
 }
+.nav-link{
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-link{
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .header-nav {
   margin-left: 93px;
@@ -543,6 +549,7 @@ p {
 }
 
 .portfolio .list-button {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #F5F4FA;
   color: var(--head-text-color);
 
@@ -579,8 +586,10 @@ p {
 }
 
 .portfolio-link {
+  position: relative;
+ 
   display: block;
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .portfolio-link:hover,
@@ -618,3 +627,41 @@ img {
   line-height: 1.88;
 
 }
+.wraper-overlay{
+  position: relative;
+  overflow: hidden;
+  
+}
+.overlay-card{
+   position: absolute;
+   width: 100%;
+    height: 100%;
+    left: 0%;
+    top: 0%;
+    font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 28px;
+ align-items: center;
+ justify-content: center;
+    
+      letter-spacing: 0.03em;
+    overflow:auto;
+    transform: translate(0, 100%);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    
+    padding-top: 63px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 63px;
+
+    color: #FFFFFF;
+    background: rgba(33, 150, 243, 0.9);
+}
+.portfolio-link:hover .overlay-card,
+.portfolio-link:focus .overlay-card{
+  transform: translate(0%,0%);
+}
+
