--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ html {
 }
 
 :root {
-  --accent-color: #2196F3;
+  --accent-color: #2196f3;
   --main-text-color: #757575;
   --head-text-color: #212121;
 }
@@ -19,11 +19,9 @@ body {
 
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
-
 }
 
 .section {
-
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -66,7 +64,6 @@ p {
   align-items: center;
 }
 
-
 /* Logo */
 
 .logo,
@@ -99,10 +96,10 @@ p {
 .header .contacts-item:not(.header .contacts-item:last-child) {
   margin-right: 50px;
 }
-.nav-link{
+.nav-link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts-link{
+.contacts-link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -155,18 +152,21 @@ p {
   margin-right: 10px;
 }
 
-
 /* Hero */
 
 .hero {
-  background-color: #C4C4C4;
+  background-color: #c4c4c4;
 
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
 
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/heroimg.jpg);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/heroimg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -203,7 +203,7 @@ p {
   letter-spacing: 0.06em;
 
   cursor: pointer;
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 200px;
   height: 50px;
   padding: 0;
@@ -214,7 +214,7 @@ p {
 
 .hero-button:hover,
 .hero-button:focus {
-  background-color: #188CE8;
+  background-color: #188ce8;
 }
 
 /* Why you have to choose us -- about */
@@ -260,7 +260,7 @@ p {
   align-items: center;
   justify-content: center;
 
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   border-radius: 4px;
 }
 
@@ -316,7 +316,7 @@ p {
 /* .team-title - added to direction-title */
 
 .team {
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
 }
 
 .team-list {
@@ -332,7 +332,8 @@ p {
   width: calc((100% - 90px) / 4);
 
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team .card-description {
@@ -360,7 +361,6 @@ p {
 
 .team .icons-list {
   display: flex;
-
 }
 
 .team .icons-item {
@@ -378,7 +378,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   border-radius: 50%;
   fill: #afb1b8;
 }
@@ -393,7 +393,6 @@ p {
   width: 20px;
   height: 20px;
 }
-
 
 /* Partners */
 
@@ -413,14 +412,14 @@ p {
 .partners .box-item {
   display: flex;
   width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
-
-  fill: #AFB1B8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #afb1b8;
 }
 
 .partners .icon {
@@ -437,7 +436,7 @@ p {
 /* Footer */
 
 .footer {
-  background-color: #2F303A;
+  background-color: #2f303a;
 
   padding-top: 60px;
   padding-bottom: 60px;
@@ -490,7 +489,7 @@ p {
   text-transform: uppercase;
   margin-bottom: 20px;
 
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .add-list {
@@ -516,6 +515,7 @@ p {
   justify-content: center;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer .box-item:hover,
@@ -527,8 +527,7 @@ p {
   width: 20px;
   height: 20px;
 
-  fill: #FFFFFF;
-
+  fill: #ffffff;
 }
 
 /* Portfolio */
@@ -549,8 +548,9 @@ p {
 }
 
 .portfolio .list-button {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: #F5F4FA;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #f5f4fa;
   color: var(--head-text-color);
 
   font-family: inherit;
@@ -570,7 +570,8 @@ p {
 .portfolio .list-button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-card {
@@ -587,15 +588,14 @@ p {
 
 .portfolio-link {
   position: relative;
- 
+
   display: block;
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .portfolio-link:hover,
 .portfolio-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -605,9 +605,9 @@ img {
 
 .portfolio .card-description {
   padding: 24px 20px;
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
-  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -625,43 +625,82 @@ img {
   color: var(--main-text-color);
   font-size: 16px;
   line-height: 1.88;
-
 }
-.wraper-overlay{
+.wraper-overlay {
   position: relative;
   overflow: hidden;
-  
 }
-.overlay-card{
-   position: absolute;
-   width: 100%;
-    height: 100%;
-    left: 0%;
-    top: 0%;
-    font-family: 'Roboto';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 28px;
- align-items: center;
- justify-content: center;
-    
-      letter-spacing: 0.03em;
-    overflow:auto;
-    transform: translate(0, 100%);
-   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.overlay-card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0%;
+  top: 0%;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  align-items: center;
+  justify-content: center;
 
-    
-    padding-top: 63px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-bottom: 63px;
+  letter-spacing: 0.03em;
+  overflow: auto;
+  transform: translate(0, 100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    color: #FFFFFF;
-    background: rgba(33, 150, 243, 0.9);
+  padding-top: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+
+  color: #ffffff;
+  background: rgba(33, 150, 243, 0.9);
 }
 .portfolio-link:hover .overlay-card,
-.portfolio-link:focus .overlay-card{
-  transform: translate(0%,0%);
+.portfolio-link:focus .overlay-card {
+  transform: translate(0%, 0%);
 }
 
+/*--modal- window index--*/
+
+.buckdrop {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.buckdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: #ffffff;
+}
+
+.codal-close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+}
