--- a/css/styles.css
+++ b/css/styles.css
@@ -55,8 +55,7 @@ p {
 .header {
   border-bottom: 1px solid #ececec;
 
-  padding-top: 25px;
-  padding-bottom: 24px;
+  
 }
 
 .header .container {
@@ -69,6 +68,8 @@ p {
 .logo,
 .logo-firstpart {
   color: #000000;
+  padding-top: 25px;
+    padding-bottom: 24px;
 
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -83,6 +84,8 @@ p {
 
 /* Navigation + Contacts */
 
+
+
 .header .header-list {
   display: flex;
 }
@@ -96,12 +99,6 @@ p {
 .header .contacts-item:not(.header .contacts-item:last-child) {
   margin-right: 50px;
 }
-.nav-link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts-link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .header-nav {
   margin-left: 93px;
@@ -109,8 +106,8 @@ p {
 
 .header .nav-link,
 .header .contacts-link {
-  display: flex;
-  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   color: var(--head-text-color);
 
@@ -119,6 +116,9 @@ p {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header .nav-link:hover,
@@ -129,7 +129,25 @@ p {
   fill: var(--accent-color);
 }
 
+.header .nav-link {
+  position: relative;
+}
+
+.header .nav-link::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  bottom: 0;
+  opacity: 0;
+}
+
 .header .contacts-link {
+  display: flex;
+  align-items: center;
   color: inherit;
   fill: var(--main-text-color);
 }
@@ -137,6 +155,12 @@ p {
 .header .nav-link.active {
   color: var(--accent-color);
 }
+
+.header .nav-link.active::after {
+  opacity: 1;
+}
+
+
 
 .mail-icon {
   width: 16px;
@@ -309,8 +333,37 @@ p {
   text-align: center;
 
   margin-bottom: 50px;
-}
 
+
+}
+.direction-overlay{
+  position: relative;
+}
+.direction-card-overlay{
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  width: 370px;
+  height: 70px;
+ 
+  background-color: rgba(47, 48, 58, 0.8);;
+}
+.direction-card-overlay{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  padding-top: 27px;
+    padding-left: 107px;
+    padding-bottom: 27px;
+    padding-right: 107px;
+ 
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+}
 /* < Our team -- team */
 
 /* .team-title - added to direction-title */
@@ -378,7 +431,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-
+transition: background-color 250  ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 50%;
   fill: #afb1b8;
 }
@@ -412,19 +465,23 @@ p {
 .partners .box-item {
   display: flex;
   width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+ 
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   fill: #afb1b8;
 }
 
 .partners .icon {
   width: 106px;
   height: 60px;
+  
+  
 }
 
 .partners .box-item:hover,
@@ -549,7 +606,7 @@ p {
 
 .portfolio .list-button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #f5f4fa;
   color: var(--head-text-color);
 
@@ -591,6 +648,7 @@ p {
 
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
 .portfolio-link:hover,
@@ -685,6 +743,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  
   width: 528px;
   height: 581px;
   background-color: #ffffff;
@@ -700,6 +759,7 @@ img {
   width: 30px;
   height: 30px;
   border-radius: 50%;
+  cursor: pointer;
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
