--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,6 @@ p {
 }
 
 
-
 .mail-icon {
   width: 16px;
   height: 12px;
@@ -217,23 +216,24 @@ p {
 }
 
 .hero-button {
-  background-color: var(--accent-color);
-  color: #ffffff;
-
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 200px;
-  height: 50px;
-  padding: 0;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+   
+      background-color: var(--accent-color);
+        color: #ffffff;
+      
+        font-family: inherit;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.06em;
+      
+        cursor: pointer;
+      
+        padding: 10px 32px;
+        border: none;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+      
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -341,29 +341,22 @@ p {
 }
 .direction-card-overlay{
   position: absolute;
-  bottom: 0%;
-  left: 0%;
-  width: 370px;
-  height: 70px;
- 
-  background-color: rgba(47, 48, 58, 0.8);;
-}
-.direction-card-overlay{
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  padding-top: 27px;
-    padding-left: 107px;
+    bottom: 0;
+  
+    width: 100%;
+    height: 70px;
+    padding-top: 27px;
     padding-bottom: 27px;
-    padding-right: 107px;
- 
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-
-  color: #FFFFFF;
+  
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    text-transform: uppercase;
+  
+    color: #FFFFFF;
+    background-color: rgba(47, 48, 58, 0.8);
 }
+
 /* < Our team -- team */
 
 /* .team-title - added to direction-title */
@@ -426,14 +419,14 @@ p {
 }
 
 .team .box-item {
-  width: 100%;
-  height: 100%;
+ 
   display: flex;
-  align-items: center;
-  justify-content: center;
-transition: background-color 250  ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border-radius: 50%;
-  fill: #afb1b8;
+    padding: 12px;
+    border-radius: 50%;
+    fill: #afb1b8;
+  
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team .box-item:hover,
@@ -605,8 +598,7 @@ transition: background-color 250  ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cub
 }
 
 .portfolio .list-button {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
   background-color: #f5f4fa;
   color: var(--head-text-color);
 
@@ -621,6 +613,9 @@ transition: background-color 250  ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cub
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio .list-button:hover,
@@ -644,7 +639,7 @@ transition: background-color 250  ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cub
 }
 
 .portfolio-link {
-  position: relative;
+  
 
   display: block;
   text-decoration: none;
