--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,6 @@ p {
 
 .header {
   border-bottom: 1px solid #ececec;
-
-  
 }
 
 .header .container {
@@ -68,8 +66,6 @@ p {
 .logo,
 .logo-firstpart {
   color: #000000;
-  padding-top: 25px;
-    padding-bottom: 24px;
 
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -84,14 +80,13 @@ p {
 
 /* Navigation + Contacts */
 
-
-
 .header .header-list {
   display: flex;
 }
 
 .header .header-contacts {
   display: flex;
+  align-items: center;
   margin-left: auto;
 }
 
@@ -134,14 +129,14 @@ p {
 }
 
 .header .nav-link::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 100%;
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
-  bottom: 0;
+  bottom: -2px;
   opacity: 0;
 }
 
@@ -159,7 +154,6 @@ p {
 .header .nav-link.active::after {
   opacity: 1;
 }
-
 
 .mail-icon {
   width: 16px;
@@ -216,24 +210,23 @@ p {
 }
 
 .hero-button {
-   
-      background-color: var(--accent-color);
-        color: #ffffff;
-      
-        font-family: inherit;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        letter-spacing: 0.06em;
-      
-        cursor: pointer;
-      
-        padding: 10px 32px;
-        border: none;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-      
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--accent-color);
+  color: #ffffff;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  cursor: pointer;
+
+  padding: 10px 32px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -333,28 +326,27 @@ p {
   text-align: center;
 
   margin-bottom: 50px;
-
-
 }
-.direction-overlay{
+.direction-overlay {
   position: relative;
 }
-.direction-card-overlay{
+.direction-card-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
-    bottom: 0;
-  
-    width: 100%;
-    height: 70px;
-    padding-top: 27px;
-    padding-bottom: 27px;
-  
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    text-transform: uppercase;
-  
-    color: #FFFFFF;
-    background-color: rgba(47, 48, 58, 0.8);
+  bottom: 0;
+
+  width: 100%;
+  height: 70px;
+
+  font-size: 14px;
+  line-height: 1.14;
+
+  text-transform: uppercase;
+
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 /* < Our team -- team */
@@ -419,14 +411,17 @@ p {
 }
 
 .team .box-item {
- 
   display: flex;
-    padding: 12px;
-    border-radius: 50%;
-    fill: #afb1b8;
-  
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+  fill: #afb1b8;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team .box-item:hover,
@@ -458,23 +453,20 @@ p {
 .partners .box-item {
   display: flex;
   width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
- 
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   fill: #afb1b8;
+  fill: #afb1b8;
 }
 
 .partners .icon {
   width: 106px;
   height: 60px;
-  
-  
 }
 
 .partners .box-item:hover,
@@ -598,7 +590,6 @@ p {
 }
 
 .portfolio .list-button {
-  
   background-color: #f5f4fa;
   color: var(--head-text-color);
 
@@ -614,8 +605,8 @@ p {
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio .list-button:hover,
@@ -639,11 +630,9 @@ p {
 }
 
 .portfolio-link {
-  
-
   display: block;
   text-decoration: none;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
@@ -738,7 +727,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
+
   width: 528px;
   height: 581px;
   background-color: #ffffff;
